--- a/app/views/users/show.jade
+++ b/app/views/users/show.jade
@@ -1,6 +1,6 @@
-extends ../layouts/default
+extends ../index
 
-block main
+block content
   .container
-      - var name = user.name ? user.name : user.username
-      h1= name
+      //- var name = user.name ? user.name : user.username
+      //h3= name
