--- a/app/views/articles/form.jade
+++ b/app/views/articles/form.jade
@@ -1,47 +1,25 @@
-extends ../layouts/default
+extends ../index
 
 block content
-    .container
-      ol.breadcrumb
-       li= title
+    - var action = '/articles'
+    - action += article.isNew? '' : '/' + article.id
 
-      - var action = '/articles'
-      - action += article.isNew? '' : '/' + article.id
-
-      .row
-        .col-md-8
-          form.form-horizontal(method="post", action=action, enctype="multipart/form-data", role="form")
-
+    .container-fluid
+        form.form-horizontal(method="post", action=action, enctype="multipart/form-data", role="form")
             input(type="hidden", name="_csrf", value="#{csrf_token}")
 
             - if (!article.isNew)
-              input(type="hidden", name="_method", value="PUT")
-
+                input(type="hidden", name="_method", value="PUT")
             .form-group
-              label.col-sm-2.control-label(for='title') Title
-              .col-sm-10
                 input.form-control#title(type='text', name="title", value=article.title, placeholder='Enter the title')
-
             .form-group
-              label.col-sm-2.control-label(for='file') Image
-              .col-sm-10
-                input.form-control#file(type='file', name="image[]")
-
+                textarea.textarea#desc(name="body", placeholder="Place some text here", style="width: 100%; height: 350px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;")=article.body
             .form-group
-              label.col-sm-2.control-label(for='desc') Body
-              .col-sm-10
-                textarea.form-control#desc(rows="5", name="body", placeholder='Enter the article description')=article.body
-
-            .form-group
-              label.col-sm-2.control-label(for='tags') Tags
-              .col-sm-10
                 input.form-control#tags(type='text', name="tags", value=article.tags, placeholder='Enter the tags')
-
             .form-group
-              .col-sm-offset-2.col-sm-10
-                button.btn.btn-primary(type='submit') Save
+                button.btn.btn-primary(type='submit') Сохранить
                 | &nbsp;
-                a.btn(href='/articles', title="cancel") Cancel
+                a.btn(href='/articles', title="cancel") Отменить
 
         .col-md-4
           - if (!article.isNew && article.image && article.image.files && article.image.files.length)
