--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -1,6 +1,11 @@
-script(src='http://code.jquery.com/jquery-1.10.2.min.js')
-script(src='/js/bootstrap.min.js')
-script(src='/js/jquery.tagsinput.min.js')
-script(src='/js/app.js')
-
+// jQuery 2.0.2
+script(src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js")
+// jQuery UI 1.10.3
+script(src="/js/jquery-ui-1.10.3.js", type="text/javascript")
+// Bootstrap
+script(src="/js/bootstrap.js", type="text/javascript")
+// Bootstrap WYSIHTML5
+script(src="/js/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js", type="text/javascript")
+// AdminLTE
+script(src="/js/AdminLTE/dashboard.js", type="text/javascript")
 block foot
