--- a/app/views/users/login.jade
+++ b/app/views/users/login.jade
@@ -1,6 +1,6 @@
 extends auth
 
-block auth
+block form
   form(action="/users/session", method="post", role="form").form-signin
     .well
         h2.form-signin-heading Пожалуйста авторизируйтесь
