--- a/app/views/articles/form.jade
+++ b/app/views/articles/form.jade
@@ -13,6 +13,8 @@ block content
             .form-group
                 input.form-control#title(type='text', name="title", value=article.title, placeholder='Enter the title')
             .form-group
+                textarea(name="description", placeholder="Краткое описание материала", style="width: 100%; height: 100px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;")=article.description
+            .form-group
                 textarea.textarea#desc(name="body", placeholder="Place some text here", style="width: 100%; height: 350px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;")=article.body
             .form-group
                 input.form-control#tags(type='text', name="tags", value=article.tags, placeholder='Enter the tags')
