--- a/app/views/articles/show.jade
+++ b/app/views/articles/show.jade
@@ -1,33 +1,27 @@
 extends ../index
 
 block content
-  .container
+  .container-fluid
       .row
-        .col-md-8
+        .col-md-12
           p!=article.body
-          .meta
+          blockquote.blockquote-reverse
             - if (article.user)
               - var name = article.user.name ? article.user.name : article.user.username
-
-              p Author :&nbsp;
+              p Автор:&nbsp;
                 a(href="/users/"+article.user._id)= name
-
             - if (article.tags)
-              p Tags &nbsp;
+              p Теги:&nbsp;
                 - each tag in article.tags.split(',')
                   i.muted.fa.fa-tag &nbsp;
                   a.tag(href="/tags/"+tag)= tag
                   | &nbsp;&nbsp;
 
             p.muted= formatDate(article.createdAt, "%b %d, %Y at %I:%M %p")
-
-        .col-md-4
-          - if (!article.isNew && article.image && article.image.files && article.image.files.length)
-            img(src=article.image.cdnUri + '/mini_' + article.image.files[0])
-
-      form(action="/articles/"+article.id, method="post", onsubmit="return confirm('Are you sure?')")
-        input(type='hidden', name='_csrf', value="#{csrf_token}")
-        a.btn.btn-default(href='/articles/'+article._id+'/edit', title="edit") Edit
-        | &nbsp;
-        input(type="hidden", name="_method", value="DELETE")
-        button.btn.btn-danger(type="submit") Delete
+              - if (req.isAuthenticated() && req.user.role === 'Professor')
+                  form(action="/articles/"+article.id, method="post", onsubmit="return confirm('Are you sure?')")
+                    input(type='hidden', name='_csrf', value="#{csrf_token}")
+                    a.btn.btn-default(href='/articles/'+article._id+'/edit', title="edit") Редактировать
+                    | &nbsp;
+                    input(type="hidden", name="_method", value="DELETE")
+                    button.btn.btn-danger(type="submit") Удалить
