--- a/app/views/users/signup.jade
+++ b/app/views/users/signup.jade
@@ -1,6 +1,6 @@
 extends auth
 
-block auth
+block form
   form(action="/users", method="post", role="form").form-signup
     .well
         h2.form-signin-heading Пожалуйста зарегистрируйтесь
@@ -9,8 +9,8 @@ block auth
         .form-group
             input#email.form-control(type='text', name="email", placeholder='Email', value=user.email)
         .form-group
-            input#username.form-control(type='text', name="username", placeholder='Username', value=user.username)
+            input#username.form-control(type='text', name="group", placeholder='Номер группы', value=user.group)
         .form-group
-            input#password.form-control(type='password', name="password", placeholder='Password')
+            input#password.form-control(type='password', name="password", placeholder='Пароль')
         button.btn.btn-lg.btn-primary.btn-block(type='submit') Зарегистрироваться
         input(type='hidden', name='_csrf', value="#{csrf_token}")
