--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -9,6 +9,7 @@ html(lang='ru')
         link(href="/css/bootstrap.css", rel="stylesheet", type="text/css")
         link(href="/css/bootstrap-wysihtml5/bootstrap3-wysihtml5.css", rel="stylesheet", type="text/css")
         link(href="/css/main.css", rel="stylesheet", type="text/css")
+        link(href="/css/timeline/timeline.css" rel="stylesheet")
     body
         include ../includes/header
         - if (req.isAuthenticated() === false)
