--- a/app/views/articles/form.jade
+++ b/app/views/articles/form.jade
@@ -5,23 +5,24 @@ block content
     - action += article.isNew? '' : '/' + article.id
 
     .container-fluid
-        form.form-horizontal(method="post", action=action, enctype="multipart/form-data", role="form")
-            input(type="hidden", name="_csrf", value="#{csrf_token}")
+        .col-md-12
+            form.form-horizontal(method="post", action=action, enctype="multipart/form-data", role="form")
+                input(type="hidden", name="_csrf", value="#{csrf_token}")
 
-            - if (!article.isNew)
-                input(type="hidden", name="_method", value="PUT")
-            .form-group
-                input.form-control#title(type='text', name="title", value=article.title, placeholder='Enter the title')
-            .form-group
-                textarea(name="description", placeholder="Краткое описание материала", style="width: 100%; height: 100px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;")=article.description
-            .form-group
-                textarea.textarea#desc(name="body", placeholder="Place some text here", style="width: 100%; height: 350px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;")=article.body
-            .form-group
-                input.form-control#tags(type='text', name="tags", value=article.tags, placeholder='Enter the tags')
-            .form-group
-                button.btn.btn-primary(type='submit') Сохранить
-                | &nbsp;
-                a.btn(href='/articles', title="cancel") Отменить
+                - if (!article.isNew)
+                    input(type="hidden", name="_method", value="PUT")
+                .form-group
+                    input.form-control#title(type='text', name="title", value=article.title, placeholder='Enter the title')
+                .form-group
+                    textarea(name="description", placeholder="Краткое описание материала", style="width: 100%; height: 100px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;")=article.description
+                .form-group
+                    textarea.textarea#desc(name="body", placeholder="Place some text here", style="width: 100%; height: 350px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;")=article.body
+                .form-group
+                    input.form-control#tags(type='text', name="tags", value=article.tags, placeholder='Enter the tags')
+                .form-group
+                    button.btn.btn-primary(type='submit') Сохранить
+                    | &nbsp;
+                    a.btn(href='/articles', title="cancel") Отменить
 
         .col-md-4
           - if (!article.isNew && article.image && article.image.files && article.image.files.length)
