--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -8,4 +8,6 @@ script(src="/js/bootstrap.js", type="text/javascript")
 script(src="/js/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js", type="text/javascript")
 // AdminLTE
 script(src="/js/AdminLTE/dashboard.js", type="text/javascript")
+// Validation
+script(src="/js/form-validation.js", type="text/javascript")
 block foot
