--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -14,7 +14,7 @@ block main
                 hr
             .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
                 include includes/messages
-                h1.page-header= title
+                h1.page-header: i.glyphicon.glyphicon-book </i> #{title}
                 block content
 
   - else
