--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -5,9 +5,9 @@ script(src="/js/jquery-ui-1.10.3.js", type="text/javascript")
 // Bootstrap
 script(src="/js/bootstrap.js", type="text/javascript")
 // Bootstrap WYSIHTML5
-script(src="/js/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js", type="text/javascript")
+script(src="/js/wysihtml5.js", type="text/javascript")
 // AdminLTE
-script(src="/js/AdminLTE/dashboard.js", type="text/javascript")
+script(src="/js/dashboard.js", type="text/javascript")
 // Validation
 script(src="/js/form-validation.js", type="text/javascript")
 block foot
